@@ -59,7 +59,7 @@
         Maintain separation between the artifact id and the version to help prevent
         merge conflicts between commits changing the GA and those changing the V.
         -->
-        <version>26.0.0.Beta1-SNAPSHOT</version>
+        <version>27.0.0.Beta1-SNAPSHOT</version>
     </parent>
 
     <artifactId>wildfly-testsuite</artifactId>
@@ -1057,6 +1057,8 @@
             </activation>
             <properties>
                 <modular.jdk.testsuite.args>${modular.jdk.args}
+                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.validator=ALL-UNNAMED
                     --add-exports=java.base/sun.security.validator=ALL-UNNAMED
                     --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
                     --add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED
